# compliance-forecast

./: .gitignore  AGENTS.md  Makefile  README.md  app.py  pyproject.toml
config/: scoring_rules_v0_1.yaml
data/sample/: audit_findings.csv  capas.csv  change_controls.csv  demo_story.md  deviations.csv  sops.csv  synthetic_qms_records.csv  training_records.csv
docs/design-references/: README.md
scripts/: __init__.py  build_vercel_demo.py  generate_sample_data.py
src/gmp_weather/: __init__.py  agents.py  audit_log.py  backtesting.py  config.py  dashboard_components.py  data_loader.py  data_quality.py  evidence.py  llm_adapter.py  ontology.py  reporting.py  schemas.py  scoring.py
tests/: test_agents.py  test_audit_log.py  test_backtesting.py  test_config.py  test_dashboard_components.py  test_data_loader.py  test_data_quality.py  test_evidence.py  test_generate_sample_data.py  test_llm_adapter.py  test_reporting.py  test_schemas.py  test_scoring.py  test_scoring_engine.py  test_vercel_demo.py
vercel-demo/: app.js  index.html  styles.css
vercel-demo/data/: forecast.json
