[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gmp-compliance-weather-forecast"
version = "0.1.0"
description = "Read-only GMP risk forecasting dashboard for synthetic QMS data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pydantic>=2.7",
  "streamlit>=1.35",
]

[project.optional-dependencies]
charts = ["plotly>=5.22"]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "src/gmp_compliance_weather_forecast.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = [
  "E402",
  "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
